[gd_scene load_steps=21 format=3 uid="uid://wb7vesffp3ca"]

[ext_resource type="Script" uid="uid://csyhdx3whnc5q" path="res://worlds/world_server.gd" id="1_30chk"]
[ext_resource type="PackedScene" uid="uid://glyqs4h5x4v1" path="res://UI/chat.tscn" id="2_mbvuf"]
[ext_resource type="Environment" uid="uid://ckt3srjx6ckmj" path="res://worlds/sky.tres" id="2_nx0s7"]
[ext_resource type="StyleBox" uid="uid://cyap5lsbo81cr" path="res://UI/panel.tres" id="2_ypg0f"]
[ext_resource type="Script" uid="uid://xsdn5gycc43h" path="res://worlds/servercamera.gd" id="3_7qotp"]
[ext_resource type="Theme" uid="uid://dmdenqhnqleg7" path="res://worlds/theme.tres" id="3_45p6a"]
[ext_resource type="Texture2D" uid="uid://bwd61mwex4gj8" path="res://UI/buttons (1).png" id="4_dymgc"]
[ext_resource type="Material" uid="uid://ddxeiqueh33ll" path="res://player/main charactershader.tres" id="4_jy8s7"]
[ext_resource type="Script" uid="uid://bpcr132m223x5" path="res://player/Camera3D.gd" id="5_6wiwk"]
[ext_resource type="PackedScene" uid="uid://c067j41iw3nkw" path="res://worlds/item_Spawner.tscn" id="7_bo8qp"]
[ext_resource type="PackedScene" uid="uid://p7cffbniya84" path="res://Main logic/http.tscn" id="10_koah2"]

[sub_resource type="Gradient" id="Gradient_nx0s7"]
colors = PackedColorArray(0.32549, 0.564706, 0.980392, 1, 0.0470588, 0.254902, 0.607843, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vjlfk"]
gradient = SubResource("Gradient_nx0s7")
width = 512

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uybb1"]
albedo_color = Color(1, 1, 0, 1)
metallic_specular = 0.0
roughness = 0.0
emission_enabled = true
emission = Color(1, 0.866667, 0.396078, 1)
emission_energy_multiplier = 6.16

[sub_resource type="SphereMesh" id="SphereMesh_dmxec"]
height = 0.001
radial_segments = 20
rings = 1
is_hemisphere = true

[sub_resource type="AtlasTexture" id="AtlasTexture_8pdex"]
atlas = ExtResource("4_dymgc")
region = Rect2(25, 115, 350, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxypl"]
atlas = ExtResource("4_dymgc")
region = Rect2(22, 17, 356, 85)

[sub_resource type="CylinderMesh" id="CylinderMesh_kw7xu"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_sdway"]
dof_blur_far_distance = 200.0
dof_blur_near_enabled = true

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_nx0s7"]
properties/0/path = NodePath(".:world_type")
properties/0/spawn = false
properties/0/replication_mode = 0
properties/1/path = NodePath(".:default_gamemode")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:timeperiod")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:pvp")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:world_name")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:worldspawn")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath(".:time")
properties/6/spawn = true
properties/6/replication_mode = 0
properties/7/path = NodePath(".:isHealthShownInPlayerList")
properties/7/spawn = true
properties/7/replication_mode = 2
properties/8/path = NodePath(".:ischeatsEnabled")
properties/8/spawn = true
properties/8/replication_mode = 2

[node name="Node3D" type="Node3D" node_paths=PackedStringArray("item_spawner", "chat")]
script = ExtResource("1_30chk")
item_spawner = NodePath("MultiplayerSpawner")
chat = NodePath("chat")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_nx0s7")

[node name="TextureRect" type="TextureRect" parent="WorldEnvironment"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("GradientTexture1D_vjlfk")

[node name="DebugDetails" type="RichTextLabel" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -390.0
offset_right = 471.0
offset_bottom = -4.0
grow_vertical = 0

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.1519, 22.442, 11.8897)
light_energy = 12.797
shadow_enabled = true
omni_range = 218.634

[node name="sun" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="sun"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.26181, 352.314, 0)
sky_mode = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="sun/DirectionalLight3D"]
transform = Transform3D(100, 4.65556e-07, -7.70342e-09, -4.45652e-09, -5.60284e-06, -100, -4.88103e-07, 100, -4.64916e-06, -0.848907, -0.0248837, -1.78549)
material_override = SubResource("StandardMaterial3D_uybb1")
cast_shadow = 0
mesh = SubResource("SphereMesh_dmxec")

[node name="Control" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="Control/Control"]
light_mask = 0
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -326.0
offset_right = 296.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("2_ypg0f")

[node name="MarginContainer" type="MarginContainer" parent="Control/Control/Panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Control/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="Control/Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "World Name:"

[node name="TextEdit2" type="TextEdit" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 17
placeholder_text = "Enter world name"

[node name="Label5" type="Label" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Seed"

[node name="TextEdit3" type="TextEdit" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 17
placeholder_text = "Enter Seed"

[node name="Label4" type="Label" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Land Type"

[node name="landtype" type="OptionButton" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="Label3" type="Label" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Gamemode:"

[node name="gm" type="OptionButton" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
selected = 1
item_count = 2
popup/item_0/text = "Creative"
popup/item_0/id = 0
popup/item_1/text = "Survival"
popup/item_1/id = 1

[node name="Label6" type="Label" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Cheats"

[node name="cheats" type="CheckButton" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="Label7" type="Label" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Keep Inventory"

[node name="keep Inventory" type="CheckButton" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="Label2" type="Label" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Friendly Fire"

[node name="CheckButton" type="CheckButton" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="Label8" type="Label" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Spawn point"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="LineEdit" type="LineEdit" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2

[node name="LineEdit2" type="LineEdit" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2

[node name="LineEdit3" type="LineEdit" parent="Control/Control/Panel/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2

[node name="host" type="TextureButton" parent="Control/Control/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("3_45p6a")
texture_normal = SubResource("AtlasTexture_8pdex")
texture_hover = SubResource("AtlasTexture_hxypl")
stretch_mode = 3

[node name="Label" type="Label" parent="Control/Control/Panel/MarginContainer/VBoxContainer/host"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -11.5
offset_right = 21.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "HOST"

[node name="iptext" type="Label" parent="Control/Control/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
autowrap_mode = 2

[node name="chat" parent="." node_paths=PackedStringArray("world") instance=ExtResource("2_mbvuf")]
offset_left = 4.0
offset_top = -221.0
offset_right = 319.0
offset_bottom = -5.0
world = NodePath("..")

[node name="ServerSpectator" type="Node3D" parent="."]
script = ExtResource("3_7qotp")

[node name="head" type="MeshInstance3D" parent="ServerSpectator"]
transform = Transform3D(1.31134e-07, 0.416457, -2.83452e-08, 3.82137e-15, 1.82039e-08, 0.648463, 1, -5.46118e-08, 1.23901e-15, 0, 1.23596, 0)
visible = false
mesh = SubResource("CylinderMesh_kw7xu")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("4_jy8s7")

[node name="Camera3D" type="Camera3D" parent="ServerSpectator/head"]
transform = Transform3D(1, -2.69627e-07, -1.47031e-09, 6.1232e-10, 0.0108011, -2.40115, 1.74843e-07, 1.54207, 0.0168184, 3.55271e-12, -5.84714, 1.74303)
attributes = SubResource("CameraAttributesPractical_sdway")
script = ExtResource("5_6wiwk")

[node name="Arrowpoint" type="Node3D" parent="ServerSpectator/head"]
transform = Transform3D(1, -6.75016e-14, 9.82942e-16, 8.52651e-14, 1, -1.11759e-08, -5.39385e-15, 1.77636e-14, 1, 0, 3, 0)

[node name="ray" type="RayCast3D" parent="ServerSpectator/head"]
transform = Transform3D(1, 2.28524e-15, 3.55271e-15, 0, -4.37114e-08, -1, -2.28524e-15, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, 0, -15)
debug_shape_thickness = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="http" parent="." node_paths=PackedStringArray("my_world") instance=ExtResource("10_koah2")]
my_world = NodePath("..")

[node name="MultiplayerSpawner" parent="." node_paths=PackedStringArray("world") instance=ExtResource("7_bo8qp")]
_spawnable_scenes = PackedStringArray()
world = NodePath("..")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_nx0s7")

[connection signal="button_down" from="Control/Control/Panel/MarginContainer/VBoxContainer/host" to="." method="_on_host_button_down"]
[connection signal="ready" from="Control/Control/Panel/MarginContainer/VBoxContainer/iptext" to="." method="_on_label_ready"]
[connection signal="timeout" from="Timer" to="." method="timer_spawn_trident"]
